@@ -26,9 +26,9 @@ import raw.runtime.truffle.ast.io.json.reader.JsonPrintNodeGen;
 public class TrufflePrintJsonEntry extends PrintJsonEntry implements TruffleEntryExtension {
   @Override
   public ExpressionNode toTruffle(Type type, List<TruffleArg> args, RawLanguage rawLanguage) {
-    JsonWriter jsonWriter = new JsonWriter();
     return JsonPrintNodeGen.create(
-        args.get(0).exprNode(),
-        jsonWriter.recurse((Rql2TypeWithProperties) args.get(0).type(), rawLanguage));
+        args.getFirst().exprNode(),
+        JsonWriter.recurse((Rql2TypeWithProperties) args.getFirst().type(), rawLanguage)
+            .getCallTarget());
   }
 }
